--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,203 @@
+
 /******* Change Box Model ***************/
-*,
+
+:root {
+  --primary-color: #25292d;
+  --secondary-color: #007bff;
+  --white-color: #ffffff;
+  --black-color: #000000;
+  --hero-description-bg-color: #ffffff44;
+  --background-image: url('/images/site/small_check.jpg');
+}
+
+
+* {
+  font-family: 'Courier New', Courier, monospace;
+}
+
+p, h2 {
+  margin: 0;
+  padding: 0;
+}
+
+#index-hero h1, h3, h4 {
+  margin: 1rem 0;
+  padding: 0;
+ }
+
+
+body {
+  display: flex;
+  justify-content: center;
+  background-image: var(--background-image);
+  /* height: 100vh; */
+
+}
+
+body > div {
+  border: 2px solid var(--secondary-color);
+  border-radius: 5px;
+  padding: 1rem;
+  /* max-width: 100vw; */
+  /* height: 90vh; */
+  width: 80vw;
+  background-color: var(--white-color);
+}
+
+body footer {
+  align-self: self-end;
+}
+
+.siteName a{
+  font-size: 2rem;
+  
+}
+
 *:before,
 *:after {
   box-sizing: border-box;
+}
+
+/* body {} */
+
+#top-header {
+  display: flex;
+  justify-content: space-between;
+  margin: 1rem .1rem;
+  align-items: center;
+
+}
+
+#top-header * {
+  text-decoration: none;
+}
+
+
+nav {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: var(--white-color);
+  background-color: var(--primary-color);
+  height: 2rem;
+}
+
+nav ul{
+  display: flex;
+  justify-content: space-around;
+  list-style: none;
+  width: 100vw;
+
+
+
+}
+
+nav ul li {
+  width: 100px;
+}
+
+#index-hero-image-container {
+  display: flex;
+  justify-content: center;
+  
+}
+
+
+#index-hero {
+  margin-bottom: 1rem;
+  
+}
+
+
+#index-hero > div {
+  position: relative;
+  
+}
+
+
+#index-hero-description {
+  position: absolute;
+  padding: .2rem;
+  background-color: var(--hero-description-bg-color);
+  margin: 0 0 0 3rem;
+  top: 40%;
+  left: 10%;
+  color: var(--secondary-color);
+  font-weight: bolder;
+
+}
+
+#index-hero-description > div > p {
+  padding-bottom: .4rem;
+
+}
+
+#own-today-button {
+  height: 2.7rem;
+}
+
+#index-content {
+display: flex;
+justify-content: stretch;
+align-items: stretch;
+
+}
+
+.index-car-upgrades, .index-car-reviews {
+  flex: 1;
+}
+
+.index-car-reviews {
+  margin-left: 1.5rem;
+}
+
+.index-car-reviews ul, .index-car-reviews li {
+  padding: 0;
+  overflow: visible;
+  overflow-wrap: normal;
+  
+}
+
+.index-car-upgrade-cards {
+display: flex;
+/* grid-template-columns: repeat(2, 1fr);
+grid-gap: .1rem;
+grid-template-rows: repeat(2, 1fr); */
+flex-direction: row;
+flex-wrap: wrap;
+/* gap: .5rem; */
+
+}
+
+.index-upgrade-card {
+  display: flex;
+  flex: 0 0 calc(40% - 10px);
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+
+.index-upgrade-card > div{
+  background-color: var(--secondary-color);
+  border: 1px solid black;
+  padding: 0 2.2rem;
+  align-self: center;
+  min-width: 9vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 60px;
+  
+}
+
+.index-upgrade-card a {
+  margin: 0;
+  margin-bottom: 1rem;
+  font-size: .9rem;  
+  align-self: center;
+
+}
+
+.index-upgrade-card > div > img {
+max-height: 50px;
 }
