--- a/views/index.ejs
+++ b/views/index.ejs
@@ -42,13 +42,13 @@
                 </div>
                 <div class="index-upgrade-card">
                     <div>
-                        <img src="./images/upgrades/bumper_sticker.jpg" alt="Bumper Sticker">
+                        <img src="./images/upgrades/bumper_sticker.jpg" alt="Bumper Sticker" max-width="40px">
                     </div>
                     <a href="">Bumper Stickers</a>
                 </div>
                 <div class="index-upgrade-card">
                     <div>
-                        <img src="./images/upgrades/hub-cap.jpg" alt="Hub Caps">
+                        <img src="./images/upgrades/hub-cap.jpg" alt="Hub Caps" max>
                     </div>
                     <a href="">Hub Caps</a>
                 </div>
