--- a/public/css/styles-mobile.css
+++ b/public/css/styles-mobile.css
@@ -2,19 +2,42 @@
 
 /* mobile css */
 
-@media screen and (max-width: 800px){
+@media screen and (max-width: 600px){
 
     #index-hero h1 {
         font-size: 6vw;
     }
 
+
+body {
+    display: flex;
+    justify-content: center;
+    background-image: unset
+    /* height: 100vh; */
+  
+  }
+  
+  body > div {
+    border: 2px solid var(--secondary-color);
+    border-radius: 5px;
+    padding: 1rem;
+    /* max-width: 100vw; */
+    /* height: 90vh; */
+    width: 98vw;
+    background-color: var(--white-color);
+  }
+
 nav {
-    justify-content:space-evenly;
+    justify-content:flex-start;
 }
 
 nav ul {
-    justify-content: space-evenly;
-    width: unset;
+    justify-content: flex-start;
+    
+}
+
+nav li {
+    font-size: .7rem;
 }
 
     #index-content {
@@ -25,10 +48,12 @@ nav ul {
     order: 2;
 }
 
+.index-car-reviews li {
+    padding: 0;
+}
+
 .index-car-reviews {
     order: 1;
-
-
 }
 
 .index-car-reviews {
@@ -47,6 +72,9 @@ min-width: unset;
     left: 0;
 }
 
+#index-hero-description p {
+    font-size: 1rem;
+}
 
 #index-hero-image-container img {
     max-width: 250px;
@@ -54,7 +82,7 @@ min-width: unset;
 .index-car-upgrade-cards {
     justify-content: flex-start;
     align-items: flex-start;
-    gap: .5rem;
+    
 }
 
 .index-upgrade-card {
