--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,12 +14,12 @@
                 </div>
                 <img src="./images/site/own_today.png" alt="Own today!" id="own-today-button" height="40">
             </div>
-            <div id="index-hero-image-container">
-                <photo>
-                    <source srcset="./images/vehicles/delorean-tn.jpg" media="(max-width: 600px)" width="400">
+
+                <photo id="index-hero-image-container">
+                    <source srcset="./images/vehicles/delorean-tn.jpg" width="400">
                     <img src="./images/vehicles/delorean.jpg" alt="Delorean sports car">
                 </photo>
-            </div>
+
 
         </div>
     </div>
@@ -48,7 +48,7 @@
                 </div>
                 <div class="index-upgrade-card">
                     <div>
-                        <img src="./images/upgrades/hub-cap.jpg" alt="Hub Caps" max>
+                        <img src="./images/upgrades/hub-cap.jpg" alt="Hub Caps">
                     </div>
                     <a href="">Hub Caps</a>
                 </div>
