--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,13 +14,13 @@
                 </div>
                 <img src="./images/site/own_today.png" alt="Own today!" id="own-today-button" height="40">
             </div>
-
-                <photo id="index-hero-image-container">
+            <div>
+                <picture id="index-hero-image-container">
                     <source srcset="./images/vehicles/delorean-tn.jpg" width="400">
                     <img src="./images/vehicles/delorean.jpg" alt="Delorean sports car">
-                </photo>
+                </picture>
 
-
+            </div>
         </div>
     </div>
     <div id="index-content">
@@ -42,7 +42,7 @@
                 </div>
                 <div class="index-upgrade-card">
                     <div>
-                        <img src="./images/upgrades/bumper_sticker.jpg" alt="Bumper Sticker" max-width="40px">
+                        <img src="./images/upgrades/bumper_sticker.jpg" alt="Bumper Sticker">
                     </div>
                     <a href="">Bumper Stickers</a>
                 </div>
