--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -1,9 +1,9 @@
 <nav>
     <ul>
-        <li>Home</li>
-        <li>Custom</li>
-        <li>Sedan</li>
-        <li>SUV</li>
-        <li>Truck</li>
+        <a><li>Home</li></a>
+        <a><li>Custom</li></a>
+        <a><li>Sedan</li></a>
+        <a><li>SUV</li></a>
+        <a><li>Truck</li></a>
     </ul>
 </nav>
