--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -1,9 +1,3 @@
 <nav>
-    <ul>
-        <a><li>Home</li></a>
-        <a><li>Custom</li></a>
-        <a><li>Sedan</li></a>
-        <a><li>SUV</li></a>
-        <a><li>Truck</li></a>
-    </ul>
+    <%- nav %>
 </nav>
