--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,4 +2,7 @@
 let year = d.getFullYear() %>
 <footer>
   <p class="copyright">&copy; <%= year %>, CSE 340 App</p>
+  <a href="../../error/500">
+  <button id="big-red-button">Error <br> Button</button>
+  </a>
 </footer>
