--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -18,9 +18,10 @@
 
 * {
   font-family: 'Arial', sans-serif;
+  border-radius: 6px;
 }
 
-p, h2 {
+p, h2, hr, a {
   margin: 0;
   padding: 0;
 }
@@ -29,6 +30,13 @@ p, h2 {
   margin: 1rem 0;
   padding: 0;
  }
+
+
+.notice {
+  color: orange;
+  list-style: none;
+}
+
 
 
 body {
@@ -103,6 +111,7 @@ nav ul li {
   cursor: pointer;
   font-size: 1rem;
   color: var(--white-color);
+
 }
 
 
@@ -259,7 +268,7 @@ max-height: 50px;
 }
 .class_lists__image img {
   width: 300px;
-  height: 200px;
+  height: 210px;
   object-fit:fill;
   overflow: hidden;
   /* max-width: 200px; */
@@ -319,3 +328,67 @@ font-weight: bolder;
 .inv__details-content_description {
 
 }
+
+
+
+.form_part {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  /* margin: 1rem; */
+  /* align-items: flex-start; */
+}
+
+fieldset {
+  padding: 1rem;
+  max-width: 20%;
+  display: flex;
+  flex-direction: column;
+  background-color: var(--primary-color);
+  border: 1px solid black;
+}
+
+fieldset, p {
+  color: var(--white-color);
+  margin: .4rem 0;
+  text-wrap: none;
+}
+
+.login_signup_message {
+  margin-left: 16%;
+  text-wrap: none;
+}
+
+fieldset input {
+  width: 200px;
+  border: 1px solid black;
+}
+
+fieldset button {
+  margin: 1rem 0;
+  max-width: 75px;
+  border-radius: 12px;
+  /* align-self: center; */
+  margin-left: 30%;
+  cursor: pointer;
+  padding: .3rem .5rem;
+  font-size: small;
+  background-color: var(--white-color);
+  color: var(--black-color);
+  border: 1px solid black;
+}
+
+
+
+fieldset a {
+  text-decoration:underline;
+  color: var(--secondary-color);
+  cursor: pointer;
+}
+
+#showPass {
+  /* margin-left: 1rem; */
+  cursor: pointer;
+}
+
