--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,6 +2,7 @@
     <div id="index-hero">
         <div>
             <h1>Welcome to CSE Motors!</h1>
+            <%- messages() %>
             <div id="index-hero-description">
                 <h2>DMC Delorean</h2>
                 <div>
