--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -5,4 +5,5 @@
     <title><%- title %> | CSE 340 App</title>
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/css/styles-mobile.css">
+    <script src="/js/script.js" type="module"></script>
 </head>
