--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -392,3 +392,15 @@ fieldset a {
   cursor: pointer;
 }
 
+
+input:required:invalid, input:focus:invalid {
+  background-image: url(/images/invalid.png);
+  background-position: right top;
+  background-repeat: no-repeat;
+ }
+  input:required:valid {
+  background-image: url(/images/valid.png);
+  background-position: right top;
+  background-repeat: no-repeat;
+  }
+ 
