--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -4,23 +4,24 @@
         <%- messages() %>
     </div>
     <div>
-        <form id="account_login">
+        <form id="account_login" action="/account/login" method="post">
             <fieldset>
                 <div class="form_part">
                     <label>
                         <p>Email:</p>
-                        <input type="email">
+                        <input type="email" required id="accountEmail"
+                        value="<%= locals.account_email %>">
                     </label>
                 </div>
                 <div class="form_part">
                     <label>
                         <p>Password:</p>
-                        <input type="password">
+                        <input name="account_password" id="password" type="password" required><br><span id="showPass">Show Password</span>
+                        <span>Passwords must be at least 12 characters and contain at least 1 number, 1 capital letter and 1 special character</span> 
                     </label>
                     <button class="login_button">LOGIN</button>
                     <p class="login_signup_message">No account? <a href="/account/register">Sign-up</a>
                 </div>
-                
             </fieldset>
         </form>
 
