--- a/views/account/register.ejs
+++ b/views/account/register.ejs
@@ -4,36 +4,54 @@
         <%- messages() %>
     </div>
     <div>
-        <form  action="/account/register" method="post" id="account_registration">
-            <fieldset>
-                <div class="form_part">
-                    <label>
-                        <p>First name</p>
-                        <input name="account_firstname" type="text" required>
-                    </label>
-                </div>
-                <div class="form_part">
-                    <label>
-                        <p>Last name</p>
-                        <input name="account_lastname" type="text" required>
-                    </label>
-                </div>
-                <div class="form_part">
-                    <label>
-                        <p>Email address</p>
-                        <input name="account_email" type="email" required>
-                    </label>
-                </div>
-                <div class="form_part">
-                    <label>
-                        <p>Password</p>
-                        <input name="account_password" id="password" type="password" required pattern="{12}"><br><span id="showPass">Show Password</span>
-                    </label>
-                </div>
-                <button class="register_button">Register</button>
+        <% if (errors) { %>
+            <ul class="notice">
+                <% errors.array().forEach(error=> { %>
+                    <li>
+                        <%= error.msg %>
+                    </li>
+                    <% }) %>
+            </ul>
+            <% } %>
+                <form action="/account/register" method="post" id="account_registration">
+                    <fieldset>
+                        <div class="form_part">
+                            <label>
+                                <p>First name</p>
+                                <input type="text" name="account_firstname" id="accountFirstname" required
+                                    value="<%= locals.account_firstname %>">
+                                <!-- <input name="account_firstname" type="text" > -->
+                            </label>
+                        </div>
+                        <div class="form_part">
+                            <label>
+                                <p>Last name</p>
+                                <input name="account_lastname" type="text" id="accountLastname"
+                                    value="<%= locals.account_lastname %>">
+                            </label>
+                        </div>
+                        <div class="form_part">
+                            <label>
+                                <p>Email address</p>
+                                <input name="account_email" type="email" required
+                                    pattern="^[\w.-]+@[\w.-]+\.[a-zA-Z]{2,3}$" id="accountEmail"
+                                    value="<%= locals.account_email %>">
+                            </label>
+                        </div>
+                        <div class="form_part">
+                            <label>
+                                <p>Password</p>
+                                <input name="account_password" id="password" type="password" required
+                                    pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{12,}$"><br><span
+                                    id="showPass">Show Password</span>
+                                <span>Passwords must be at least 12 characters and contain at least 1 number, 1 capital
+                                    letter and 1 special character</span>
+                            </label>
+                        </div>
+                        <button class="register_button">Register</button>
 
-            </fieldset>
-        </form>
+                    </fieldset>
+                </form>
 
     </div>
 </div>
