--- a/views/account/register.ejs
+++ b/views/account/register.ejs
@@ -44,7 +44,7 @@
                                 <input name="account_password" id="password" type="password" required
                                     pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{12,}$"><br><span
                                     id="showPass">Show Password</span>
-                                <span>Passwords must be at least 12 characters and contain at least 1 number, 1 capital
+                                <span class="form_instruct">Passwords must be at least 12 characters and contain at least 1 number, 1 capital
                                     letter and 1 special character</span>
                             </label>
                         </div>
