--- a/views/inventory/classification.ejs
+++ b/views/inventory/classification.ejs
@@ -3,7 +3,7 @@
     <h1>
         <%= title %>
     </h1>
+    <!-- <%- messages() %> -->
     <% } else { res.redirect('/') } %>
 
-<%# messages() %>
 <%- grid %>
