--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -3,14 +3,24 @@
         <h1><%-title-%></h1>
         <%- messages() %>
     </div>
+    
     <div>
-        <form id="account_login" action="/account/login" method="post">
+        <form id="loginForm" action="/account/login" method="post">
+            <% if (errors) { %>
+                <ul class="notice">
+                    <% errors.array().forEach(error=> { %>
+                        <li>
+                            <%= error.msg %>
+                        </li>
+                        <% }) %>
+                </ul>
+                <% } %>
             <fieldset>
                 <div class="form_part">
                     <label>
                         <p>Email:</p>
-                        <input type="email" required id="accountEmail"
-                        value="<%= locals.account_email %>">
+                        <input type="email" required id="email" name="account_email"
+                        value="<%= locals.account_email%>">
                     </label>
                 </div>
                 <div class="form_part">
