--- a/views/account/account.ejs
+++ b/views/account/account.ejs
@@ -9,6 +9,7 @@
             <p>You are logged in!</p>
             <% break; 
             case 'Admin':
+            case 'Owner':
             case 'Employee': %>
                 <h2> Welcome <%-user.account_firstname-%></h2>
                 <p>You are logged in!</p>
