--- a/views/account/account.ejs
+++ b/views/account/account.ejs
@@ -4,20 +4,20 @@
         <%- messages() %>
     </div>
     <div>
-        <% switch (user.account_type) { case 'Client' : %>
-            <h2> Welcome <%-user.account_firstname-%></h2>
-            <p>You are logged in!</p>
-            <% break; 
-            case 'Admin':
-            case 'Owner':
-            case 'Employee': %>
-                <h2> Welcome <%-user.account_firstname-%></h2>
-                <p>You are logged in!</p>
-                <p><a href="/inv/">Manage Inventory</a></p>
-                <% break; default: break;} %>
-        <p><a href="/account/edit/<%-user.account_id%>">Update account information</a></p>
-
-
-
+        <h2> Welcome <%- user.account_firstname %></h2>
+        <p>You are logged in!</p>
+    
+        <% if (user.account_type === 'Client') { %>
+        <% } else { %>
+            <!-- Admins, Employees, and Owners can see Manage Inventory -->
+            <p><a href="/inv/">Manage Inventory</a></p>
+    
+            <% if (user.account_type === 'Owner') { %>
+                <p><a href="/account/admin">Manage Users</a></p>
+            <% } %>
+        <% } %>
+    
+        <!-- All logged-in users can update their account -->
+        <p><a href="/account/edit/<%- user.account_id %>">Update account information</a></p>
     </div>
 </div>
